--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
+    "@aws-sdk/client-s3": "^3.817.0",
+    "@aws-sdk/lib-storage": "^3.817.0",
+    "@aws-sdk/s3-request-presigner": "^3.817.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
